Add Details with AJAX

--- a/Events.Web/Views/Shared/DisplayTemplates/Event.cshtml
+++ b/Events.Web/Views/Shared/DisplayTemplates/Event.cshtml
@@ -22,5 +22,14 @@
                 Location: @Model.Location
             </span>
         }
+        <div id="event-details-@Model.Id">
+            @Ajax.ActionLink("View Details","EventsDetailsById","Home",new { id = Model.Id},
+               new AjaxOptions
+               {
+                   InsertionMode = InsertionMode.Replace,
+                   UpdateTargetId = "event-details-"+Model.Id
+               },
+               new { @class= "btn btn-default"})
+        </div>
     </div>
 </div>
