--- a/Events.Web/Views/Home/Index.cshtml
+++ b/Events.Web/Views/Home/Index.cshtml
@@ -4,8 +4,9 @@
     ViewBag.Title = "Events";
 }
 
+
 <div class="jumbotron">
-    <h1>Events</h1>    
+    <h1>Events</h1>
 </div>
 
 <h1 class="event-group-heading">Upcoming Events</h1>
@@ -21,6 +22,8 @@
     }
 </div>
 
+<h1 class="event-group-heading">Passed Events</h1>
+
 <div class="row">
     @if (Model.PassedEvents.Any())
     {
@@ -31,3 +34,7 @@
         <div class="col-md-4">No Events</div>
     }
 </div>
+
+@section scripts{
+    @Scripts.Render("~/bundles/ajax")
+}
