Add create and notification methods

--- a/Events.Web/Views/Shared/_Layout.cshtml
+++ b/Events.Web/Views/Shared/_Layout.cshtml
@@ -32,6 +32,7 @@
         </div>
     </div>
     <div class="container body-content">
+        @Html.Partial("_Notifications")
         @RenderBody()
         <hr />
         <footer>
